Added OrientDBGraph#getNode method